bk_ida/gccida/g2/dw2_asm_output_addr_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_addr_rtx/src/dwarf2asm.c:681:49: error: use of undeclared identifier 'stru_6F109F'
fprintf( asm_out_file, "\t%s ", ( const char *)&stru_6F109F._IO_save_end + 7); 
                                                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_addr_rtx/src/obj/dwarf2asm.o] Error 1
